# easy-md

./: .gitignore  CLAUDE.md  LICENSE  README.md  README_EN.md  features.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
.github/workflows/: ci.yml  release.yml
.omc/: project-memory.json
.omc/state/sessions/05b04628-83aa-47b3-a001-8bea43d42a58/: session-started.json
.omc/state/sessions/3c930f82-6255-41a3-b538-c8eaee6e2c2a/: session-started.json
docs/: DESIGN.md  PROGRESS.md  SPEC.md
docs/superpowers/plans/: 2026-06-17-easy-md.md
scripts/: build-macos.sh  build.cmd  dev-macos.sh  dev.cmd  dev.ps1  fix-locale.mjs  installer.nsh  patch-wxs.mjs  register-file-association.nsh  sync-version.mjs  uninstaller.nsh
src/: App.test.tsx  App.tsx  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  watcher.rs
src-tauri/src/commands/: files.rs  mod.rs  opener.rs  recent.rs
src/components/AboutModal/: AboutModal.tsx
src/components/Content/: Content.test.tsx  Content.tsx
src/components/Editor/: Editor.test.tsx  Editor.tsx
src/components/ExportDialog/: ExportDialog.tsx
src/components/ExportPdfModal/: ExportPdfModal.tsx
src/components/Lightbox/: Lightbox.tsx
src/components/SearchBar/: SearchBar.tsx
src/components/Sidebar/: Sidebar.test.tsx  Sidebar.tsx
src/components/ThemeManager/: ThemeManager.tsx
src/components/TitleBar/: TitleBar.test.tsx  TitleBar.tsx
src/components/Welcome/: Welcome.test.ts  Welcome.tsx
src/features/export/: export.test.ts  export.ts
src/features/fileWatch/: useFileWatcher.ts
src/features/markdown/: anchors.ts  code-features.ts  github-alerts.ts  highlight.test.ts  highlight.ts  linemarks.test.ts  links.test.ts  links.ts  mermaid-render.test.ts  mermaid.test.ts  mermaid.ts  plugins.ts  rehighlight.ts  render.test.ts  render.ts  slug.ts  test-features.test.ts  toc.test.ts  toc.ts
src/features/search/: search.test.ts  search.ts
src/features/theme/: useThemeInit.ts
src/hooks/: useGlobalShortcuts.ts  useLightbox.ts  useOpenFile.ts  useRevisionShortcuts.ts
src/ipc/: files.ts  opener.ts  recent.ts  system.ts
src/stores/: customThemeStore.ts  editStore.ts  recentStore.ts  revisionStore.ts  searchStore.ts  tabsStore.test.ts  tabsStore.ts  themeStore.test.ts  themeStore.ts  zenStore.ts
src/styles/: katex.test.ts  prose.css  themes.css
src/themes/: fresh.css  midnight.css  scholarly.css  tahoe.css  template.css
src/types/: declarations.d.ts  index.ts
src/utils/: diff.test.ts  diff.ts  platform.ts  smoothScroll.ts
tests/: prose.test.ts  themes.test.ts
