[package]
name = "app"
version = "0.1.0"
description = "md++ — Windows 轻量便捷的 Markdown 阅读器"
authors = ["easy-md"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
tauri = { version = "2.11.2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tauri-plugin-log = "2"
notify = "6"
notify-debouncer-mini = "0.4"
base64 = "0.22"
dirs = "5"
tokio = { version = "1", features = ["time"] }
