[package]
name = "app"
version = "0.3.0"
description = "md++ — 轻量便捷的 Markdown 阅读器 (Windows / macOS)"
authors = ["leonan"]
license = "MIT"
repository = "https://github.com/Gitleonan/easy-md"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
tauri = { version = "2.11.2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tauri-plugin-log = "2"
notify = "6"
notify-debouncer-mini = "0.4"
base64 = "0.22"
dirs = "5"
tokio = { version = "1", features = ["time"] }

# Windows 文件关联：删除残留 UserChoice 后用 SHChangeNotify 刷新 Shell 关联与图标缓存。
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
  "Win32_UI_Shell",
] }
