[package]
name = "app"
version = "0.3.0"
description = "md++ — 轻量便捷的 Markdown 阅读器 (Windows / macOS)"
authors = ["leonan"]
license = "MIT"
repository = "https://github.com/Gitleonan/easy-md"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
tauri = { version = "2.11.2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# file:// URL → 本地路径解析（macOS 通过 Apple Event 传入的文件路径是 URL 形式）
url = "2.5"
log = "0.4"
tauri-plugin-log = "2"
notify = "6"
notify-debouncer-mini = "0.4"
base64 = "0.22"
dirs = "5"
tokio = { version = "1", features = ["time"] }

# Windows 文件关联：删除残留 UserChoice 后用 SHChangeNotify 刷新 Shell 关联与图标缓存。
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
  "Win32_UI_Shell",
] }

# 单实例：桌面端拦截第二次启动，把 argv 转发给已运行实例，新进程自动退出。
# 仅桌面端需要（移动端不支持），cfg(any(...)) 与代码里的 #[cfg(not(mobile))] 对齐。
[target.'cfg(any(target_os = "windows", target_os = "macos", target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2"
